more least squares

--- a/theory/least squares.ipynb
+++ b/theory/least squares.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7919dd0e46b3026f26c6357d693446190183a514248df8d5fd4f65c8fbfa0ba1"
+  "signature": "sha256:2202f78e42d53eedacf74d7c2c8642df5b89efdf0e3465757af698c45af1a598"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -304,8 +304,51 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Let $\\mathbf{A}=A+\\eta$, where $A$ describes the noiseless tuning curves and $\\eta$ is the noise.\n",
+      "Let $\\mathbf{A}=A+\\eta$, where \n",
       "\n",
+      "$$\n",
+      "A =\n",
+      "\\begin{bmatrix}\n",
+      "| & | &  & | \\\\\n",
+      "a_0 & a_1 & \\cdots & a_n \\\\\n",
+      "| & | &  & | \n",
+      "\\end{bmatrix}\n",
+      "$$ \n",
+      "\n",
+      "and \n",
+      "\n",
+      "\\begin{align}\n",
+      "\\eta &=\n",
+      "    \\begin{bmatrix}\n",
+      "    | & | &  & | \\\\\n",
+      "    \\eta_0 & \\eta_1 & \\cdots & \\eta_n \\\\\n",
+      "    | & | &  & | \n",
+      "    \\end{bmatrix} \\\\\n",
+      " &= \n",
+      "    \\begin{bmatrix}\n",
+      "    \\eta_{0,0} & \\eta_{0,1} & \\cdots & \\eta_{0,n} \\\\\n",
+      "    \\eta_{1,0} & \\eta_{1,1} & \\cdots & \\eta_{1,n} \\\\\n",
+      "    \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+      "    \\eta_{m,0} & \\eta_{m,1} & \\cdots & \\eta_{m,n} \\\\\n",
+      "    \\end{bmatrix} \\\\\n",
+      "\\end{align}"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "$a_i$ describes the mean tuning curve of the $i$th neuron. Beware that the _mean_ tuning curve is not necessarily the same as the _noiseless_ tuning curve. It really depends on the noise at the input to the neuron. $\\eta_{j,k}$ describes the $k$th neuron's noise centered on its mean tuning curve value at the $j$th sample of the tuning curve.  \n",
+      "\n",
+      "Modeling the mean tuning curve as equivalent to the noiseless tuning curve implies that noise only arises from our estimation of the tuning curve. That is, when a neuron spikes at the rate specified by its noiseless tuning curve, we estimate the tuning curve rate by filtering the spikes. The estimated rate will be noisy, but unbiased around the specified noiseless tuning curve firing rate. The estimated rates will be unbiased regardless of the specific noise distribution, which depends on whether the neurons produce spikes with Poisson statistics, uniformly, or anything in between.\n",
+      "\n",
+      "However, noise in our tuning curve estimates also arises because of noise at the inputs to the neurons. For example, an LIF neuron with constant input current  spikes uniformly. However, if the LIF neuron's input current comes from a synapse, which is noisy, it will not spike uniformly anymore nor will it spike at the same rate as we would expect given the mean input current. That is, noise in the neuron's input current effectively \"smooths\" the tuning curves, so if we treat the mean tuning curves as equivalent to the noiseless tuning curves, we necessarily introduce a bias in the noise to account for the tuning curve smoothing and so $E[\\eta]\\neq0$. We will see that the math is simplified if we let $a_i$ be the mean tuning curve instead of the noiseless tuning curve so that $E[\\eta]=0$."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "Expanding the norm-squared,\n",
       "\n",
       "\\begin{align}\n",
@@ -333,11 +376,71 @@
       " &= E\\left[(A^T+\\eta^T)(A+\\eta)\\mathbf{x}-(A^T+\\eta^T)\\mathbf{y}\\right] \\\\\n",
       " &= E\\left[A^TA\\mathbf{x}+A^T\\eta\\mathbf{x}+\\eta^TA\\mathbf{x}+\\eta^T\\eta\\mathbf{x}-A^T\\mathbf{y}-\\eta^T\\mathbf{y}\\right] \\\\\n",
       " &= A^TA\\mathbf{x}+A^TE[\\eta]\\mathbf{x}+E[\\eta]^TA\\mathbf{x}+E[\\eta^T\\eta]\\mathbf{x}-A^T\\mathbf{y}-E[\\eta]^T\\mathbf{y} \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "At this point, we will consider the different cases for $E[\\eta]$ and $E[\\eta^T\\eta]$."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "If $E[n]=0$\n",
+      "\n",
+      "\\begin{align}\n",
+      "0 &= A^TA\\mathbf{x}+A^TE[\\eta]\\mathbf{x}+E[\\eta]^TA\\mathbf{x}+E[\\eta^T\\eta]\\mathbf{x}-A^T\\mathbf{y}-E[\\eta]^T\\mathbf{y} \\\\ \n",
+      " &= A^TA\\mathbf{x}+E[\\eta^T\\eta]\\mathbf{x}-A^T\\mathbf{y} & \\quad \\text{since }E[\\eta]=0\\\\\n",
       " &= A^TA\\mathbf{x}+E[\\eta^T\\eta]\\mathbf{x}-A^T\\mathbf{y} \\\\\n",
-      " &= A^TA\\mathbf{x}+\\sigma^2I\\mathbf{x}-A^T\\mathbf{y} \\\\\n",
-      "(A^TA+\\sigma^2I)\\mathbf{x} &= A^T\\mathbf{y} \\\\\n",
-      "\\mathbf{x} &= (A^TA+\\sigma^2I)A^T\\mathbf{y} \\\\\n",
+      "(A^TA+E[\\eta^T\\eta])\\mathbf{x} &= A^T\\mathbf{y} \\\\\n",
+      "\\mathbf{x} &= (A^TA+E[\\eta^T\\eta])^{-1}A^T\\mathbf{y} \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "If, in addition, $E[\\eta^T\\eta]=\\sigma^2I$,\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\mathbf{x} &= \\left(A^TA+\\sigma^2I\\right)^{-1}A^T\\mathbf{y} \\\\\n",
+      "\\end{align}\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Keep in mind what these assumptions imply about the noise.\n",
+      " - $E[\\eta]=0$ implies that the noise is unbiased, which is only true if _$a_i$ is the mean tuning curves rather than the noiseless tuning curve_.\n",
+      " - $E[\\eta^T\\eta]=\\sigma^2I$ implies that the noise is _uncorrelated between neurons across the input space_, which may or may not be true."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The norm of the error given these two assumptions will be\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\|\\mathbf{e}\\| &= \\|\\mathbf{A}(A^TA+\\sigma^2I)A^T\\mathbf{y}-\\mathbf{y}\\| \\\\\n",
+      " &= \\mathbf{A}(A^TA+\\sigma^2I)A^T\\mathbf{y} \\\\\n",
       "\\end{align}"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "However, in the most general case where $E[\\eta]\\neq0$ and $E[\\eta^T\\eta]\\neq\\sigma^2I$,\n",
+      "\n",
+      "\\begin{align}\n",
+      "0 &= A^TA\\mathbf{x}+A^TE[\\eta]\\mathbf{x}+E[\\eta]^TA\\mathbf{x}+E[\\eta^T\\eta]\\mathbf{x}-A^T\\mathbf{y}-E[\\eta]^T\\mathbf{y} \\\\\n",
+      "\\left(A^TA+A^TE[\\eta]+E[\\eta]^TA+E[\\eta^T\\eta]\\right)\\mathbf{x} &= \\left(A^T+E[\\eta]^T\\right)\\mathbf{y} \\\\\n",
+      "\\mathbf{x} &= \\left(A^TA+A^TE[\\eta]+E[\\eta]^TA+E[\\eta^T\\eta]\\right)^{-1}\\left(A^T+E[\\eta]^T\\right)\\mathbf{y} \\\\\n",
+      "\\end{align}"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "---"
      ]
     },
     {
@@ -364,13 +467,9 @@
       "\n",
       "Let $\\mathbf{y}=y+\\eta$, and assume that $E[\\eta]=0$.\n",
       "\n",
-      "Expanding the norm-squared,\n",
+      "Starting with the expanding the norm-squared,\n",
       "\n",
       "\\begin{align}\n",
-      "\\|\\mathbf{A}\\mathbf{x}-\\mathbf{y}\\|_2^2 &= (\\mathbf{A}\\mathbf{x}-\\mathbf{y})^T(\\mathbf{A}\\mathbf{x}-\\mathbf{y}) \\\\\n",
-      " &= (\\mathbf{x}^T\\mathbf{A}^T-\\mathbf{y}^T)(\\mathbf{A}\\mathbf{x}-\\mathbf{y}) \\\\\n",
-      " &= \\mathbf{x}^T\\mathbf{A}^T\\mathbf{A}\\mathbf{x}-\\mathbf{x}^T\\mathbf{A}^T\\mathbf{y}-\\mathbf{y}^T\\mathbf{A}\\mathbf{x} \n",
-      "    + \\mathbf{y}^T\\mathbf{y} \\\\\n",
       "\\|\\mathbf{A}\\mathbf{x}-\\mathbf{y}\\|_2^2 &=\n",
       " \\mathbf{x}^T\\mathbf{A}^T\\mathbf{A}\\mathbf{x}-2\\mathbf{x}^T\\mathbf{A}^T\\mathbf{y}+\\mathbf{y}^T\\mathbf{y} \\\\\n",
       "\\end{align}\n",
@@ -393,7 +492,73 @@
       "\\mathbf{A}^T\\mathbf{A}\\mathbf{x} &= \\mathbf{A}^Ty \\\\\n",
       "\\mathbf{x} &= (\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^Ty \\\\\n",
       "\\end{align}\n",
-      "\n"
+      "\n",
+      "but what if we don't have access to $y$?...How much error do we introduce?"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Equivalence of SVD and regularized least squares"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Here we will show that SVD is the same as regularized least squares"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Tikhanov regularization derivation"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The regularized least squares solution also arises from formulating the problem as finding\n",
+      "\n",
+      "$$\n",
+      "\\argmin_x \\|\\mathbf{A}\\mathbf{x}-\\mathbf{y}\\|_2^2+\\|\\mathbf{\\Gamma}\\mathbf{x}\\|_2^2\n",
+      "$$\n",
+      "\n",
+      "where $\\mathbf{\\Gamma}$ is called a Tikhanov matrix.\n",
+      "\n",
+      "Expanding the objective function,\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\|\\mathbf{A}\\mathbf{x}-\\mathbf{y}\\|_2^2+\\|\\mathbf{\\Gamma}\\mathbf{x}\\|_2^2 &=\n",
+      "  \\mathbf{x}^T\\mathbf{A}^T\\mathbf{A}\\mathbf{x}-2\\mathbf{x}^T\\mathbf{A}^T\\mathbf{y}+\\mathbf{y}^T\\mathbf{y}+\n",
+      "  \\mathbf{x}^T\\mathbf{\\Gamma}^T\\mathbf{\\Gamma}\\mathbf{x} \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "Taking the derivative,\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\frac{d}{d\\mathbf{x}}\\left(\\|\\mathbf{A}\\mathbf{x}-\\mathbf{y}\\|_2^2+\\|\\mathbf{\\Gamma}\\mathbf{x}\\|_2^2\\right) &=\n",
+      "   2\\mathbf{A}^T\\mathbf{A}\\mathbf{x}-2\\mathbf{A}^T\\mathbf{y}+2\\mathbf{\\Gamma}^T\\mathbf{\\Gamma}\\mathbf{x} \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "Setting the derivative equal to 0,\n",
+      "\n",
+      "\\begin{align}\n",
+      "0 &= 2\\mathbf{A}^T\\mathbf{A}\\mathbf{x}-2\\mathbf{A}^T\\mathbf{y}+2\\mathbf{\\Gamma}^T\\mathbf{\\Gamma}\\mathbf{x} \\\\\n",
+      "\\left(\\mathbf{A}^T\\mathbf{A}+\\mathbf{\\Gamma}^T\\mathbf{\\Gamma}\\right)\\mathbf{x} &= \\mathbf{A}^T\\mathbf{y} \\\\\n",
+      "\\mathbf{x} &= \\left(\\mathbf{A}^T\\mathbf{A}+\\mathbf{\\Gamma}^T\\mathbf{\\Gamma}\\right)^{-1}\\mathbf{A}^T\\mathbf{y} \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "This solution is the same as the regularized least squares formulation with $E[\\eta]=0$, $\\mathbf{A}=A$, and $\\mathbf{\\Gamma}^T\\mathbf{\\Gamma}=E[\\eta^T\\eta]$.\n",
+      "\n",
+      "$$\n",
+      "\\mathbf{x} = \\left(A^TA+E[\\eta^T\\eta]\\right)^{-1}A^T\\mathbf{y}\n",
+      "$$"
      ]
     }
    ],
