expand svd analysis

--- a/theory/least squares.ipynb
+++ b/theory/least squares.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2202f78e42d53eedacf74d7c2c8642df5b89efdf0e3465757af698c45af1a598"
+  "signature": "sha256:82c08adf3db1be38a9fbc8e59655c73cdde53b4471ba613b1a0e31bc69066767"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -209,17 +209,6 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The error will be\n",
-      "\n",
-      "\\begin{align}\n",
-      "\\mathbf{e} &= \\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\\mathbf{y}-\\mathbf{y}\n",
-      "\\end{align}"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
       "Let's break down the solution,\n",
       "\n",
       "\\begin{align}\n",
@@ -283,6 +272,54 @@
       "    \\end{bmatrix} \\\\\n",
       "\\end{align}\n",
       "This is the projection of the output onto the tuning curves."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The error of this solution will be\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\mathbf{e} &= \\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\\mathbf{y}-\\mathbf{y} \\\\\n",
+      " &= \\left(\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T-I\\right)\\mathbf{y} \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "Here, we can see that the error will be $\\mathbf{0}$ when $\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T=I$ and is purely a function of the tuning curves. How do I interpret this result?...\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T &= U\\Sigma V^T(V\\Sigma U^TU\\Sigma V^T)^{-1}V\\Sigma U^T \\\\\n",
+      " &= U\\Sigma V^T(V\\Sigma^2 V^T)^{-1}V\\Sigma U^T\\\\\n",
+      " &= U\\Sigma V^TV\\Sigma^{-2} V^TV\\Sigma U^T \\\\\n",
+      " &= U\\Sigma \\Sigma^{-2} \\Sigma U^T\\\\\n",
+      " &= UU^T & \\text{if }\\Sigma\\text{ is square and full rank}\\\\\n",
+      " &= I\\\\ \n",
+      "\\end{align}\n",
+      "\n",
+      "Note the requirement on $\\Sigma$, which puts constraints on $U$ and $V$. What if these are not satisfied? More work to be done here..."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The norm of the error will be \n",
+      "\n",
+      "\\begin{align}\n",
+      "\\|\\mathbf{e}\\|_2 &= \\left\\|\\left(\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T-I\\right)\\mathbf{y}\\right\\|_2 \\\\\n",
+      " &= \\sqrt{\\mathbf{y}^T\\left(\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T-I\\right)^T\n",
+      "          \\left(\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T-I\\right)\\mathbf{y}} \\\\\n",
+      " &= \\sqrt{\\mathbf{y}^T\\left(\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T-I\\right)\n",
+      "          \\left(\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T-I\\right)\\mathbf{y}} \\\\\n",
+      " &= \\sqrt{\\mathbf{y}^T\n",
+      "    \\left(\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\n",
+      "    -2\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T+I\\right)\\mathbf{y}} \\\\\n",
+      " &= \\sqrt{\\mathbf{y}^T\n",
+      "    \\left(\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\n",
+      "    -2\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T+I\\right)\\mathbf{y}} \\\\\n",
+      " &= \\sqrt{\\mathbf{y}^T\\left(I-\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\\right)\\mathbf{y}} \\\\\n",
+      " &= \\sqrt{\\mathbf{y}^T\\mathbf{y}-\\mathbf{y}^T\\mathbf{A}(\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\\mathbf{y}} \\\\\n",
+      "\\end{align}"
      ]
     },
     {
@@ -408,18 +445,35 @@
      "source": [
       "Keep in mind what these assumptions imply about the noise.\n",
       " - $E[\\eta]=0$ implies that the noise is unbiased, which is only true if _$a_i$ is the mean tuning curves rather than the noiseless tuning curve_.\n",
-      " - $E[\\eta^T\\eta]=\\sigma^2I$ implies that the noise is _uncorrelated between neurons across the input space_, which may or may not be true."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "The norm of the error given these two assumptions will be\n",
+      " - $E[\\eta^T\\eta]=\\sigma^2I$ implies that the noise is _uncorrelated between neurons across the input space_, which may or may not be true.\n",
+      " \n",
+      "\\begin{align}\n",
+      "E[\\eta^T\\eta] &=\n",
+      "    E\\begin{bmatrix}\n",
+      "    \\eta_0^T\\eta_0 & \\eta_0^T\\eta_1 & \\cdots & \\eta_0^T\\eta_n\\\\\n",
+      "    \\eta_1^T\\eta_0 & \\eta_1^T\\eta_1 & \\cdots & \\eta_1^T\\eta_n\\\\\n",
+      "    \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+      "    \\eta_n^T\\eta_0 & \\eta_n^T\\eta_1 & \\cdots & \\eta_n^T\\eta_n\\\\\n",
+      "    \\end{bmatrix} \\\\\n",
+      "&=\n",
+      "    \\begin{bmatrix}\n",
+      "    \\sum_{i=0}^mE[\\eta_{0,i}^2] & \\sum_{i=0}^mE[\\eta_{0,i}\\eta_{1,i}] & \\cdots & \\sum_{i=0}^mE[\\eta_{0,i}\\eta_{n,i}]\\\\\n",
+      "    \\sum_{i=0}^mE[\\eta_{1,i}\\eta_{0,i}] & \\sum_{i=0}^mE[\\eta_{1,i}^2] & \\cdots & \\sum_{i=0}^mE[\\eta_{1,i}\\eta_{n, i}]\\\\\n",
+      "    \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+      "    \\sum_{i=0}^mE[\\eta_{n,i}\\eta_{0,i}] & \\sum_{i=0}^mE[\\eta_{n,i}\\eta_{1,i}] & \\cdots & \\sum_{i=0}^mE[\\eta_{n,i}^2]\\\\\n",
+      "    \\end{bmatrix}\n",
+      "\\end{align}\n",
+      "\n",
+      "If $\\eta_{i,j}$ is uncorrelated with $\\eta_{k,l}$ for $i\\neq k$ and $j\\neq l$, then the off diagonal terms are 0, so\n",
       "\n",
       "\\begin{align}\n",
-      "\\|\\mathbf{e}\\| &= \\|\\mathbf{A}(A^TA+\\sigma^2I)A^T\\mathbf{y}-\\mathbf{y}\\| \\\\\n",
-      " &= \\mathbf{A}(A^TA+\\sigma^2I)A^T\\mathbf{y} \\\\\n",
+      "E[\\eta^T\\eta] &=\n",
+      "    \\begin{bmatrix}\n",
+      "    \\sum_{i=0}^mE[\\eta_{0,i}^2] & 0 & \\cdots & 0 \\\\\n",
+      "    0 & \\sum_{i=0}^mE[\\eta_{1,i}^2] & \\cdots & 0 \\\\\n",
+      "    \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+      "    0 & 0 & \\cdots & \\sum_{i=0}^mE[\\eta_{n,i}^2]\\\\\n",
+      "    \\end{bmatrix}\n",
       "\\end{align}"
      ]
     },
@@ -501,14 +555,77 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Equivalence of SVD and regularized least squares"
+      "Regularized least squares SVD analysis "
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Here we will show that SVD is the same as regularized least squares"
+      "Here we will show that the least squares solution via singular value decomposition (SVD) is the same as regularized least squares for constant noise power. By taking the singular value decomposition $A=U\\Sigma V^T$,\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\mathbf{x} &= \\left(A^TA+\\sigma^2I\\right)^{-1}A^T\\mathbf{y} \\\\\n",
+      " &= \\left(V\\Sigma U^TU\\Sigma V^T+\\sigma^2I\\right)^{-1}V\\Sigma U^T\\mathbf{y} \\\\\n",
+      " &= \\left(V\\Sigma^2V^T+\\sigma^2I\\right)^{-1}V\\Sigma U^T\\mathbf{y} \\\\\n",
+      " &= \\left(V\\Sigma^2V^T+\\sigma^2VV^T\\right)^{-1}V\\Sigma U^T\\mathbf{y} \\\\\n",
+      " &= \\left(V\\left(\\Sigma^2+\\sigma^2I\\right)V^T\\right)^{-1}V\\Sigma U^T\\mathbf{y} \\\\\n",
+      " &= V\\left(\\Sigma^2+\\sigma^2I\\right)^{-1}V^TV\\Sigma U^T\\mathbf{y} \\\\\n",
+      " &= V\\left(\\Sigma^2+\\sigma^2I\\right)^{-1}\\Sigma U^T\\mathbf{y} \\\\\n",
+      " &= VDU^T\\mathbf{y} & \\text{where } D \\text{ is diagonal and } D_{i,i}=\\frac{\\alpha_i}{\\alpha_i^2+\\sigma^2}\\\\\n",
+      "\\end{align}\n"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Regularized least squares vs $A^TA$ SVD conditioning"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "If instead of using the regularized least squares approach, we use SVD of $A^TA$ to condition the inverse, how much off we will be in the expected solution?\n",
+      "\n",
+      "If $A=U\\Sigma V^T$, \n",
+      "\n",
+      "$$\n",
+      "A^TA=V\\Sigma U^TU\\Sigma V^T=V\\Sigma^2V^T,\n",
+      "$$\n",
+      "\n",
+      "and \n",
+      "\n",
+      "\\begin{align}\n",
+      "\\mathbf{x} &= (\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\\mathbf{y} \\\\\n",
+      " &= (V\\Sigma^2V^T)^{-1}\\mathbf{A}^T\\mathbf{y} \\\\\n",
+      " &= V\\Sigma^{-2}V^T\\mathbf{A}^T\\mathbf{y} \\\\\n",
+      "\\end{align}"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Least squares (pseudoinverse) via SVD"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Here we will derive the least squares solution using SVD.\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\mathbf{A}\\mathbf{x} &= \\mathbf{y} \\\\\n",
+      "U\\Sigma V^T\\mathbf{x} &= \\mathbf{y} \\\\\n",
+      "\\Sigma V^T\\mathbf{x} &= U^T\\mathbf{y} \\\\\n",
+      "V^T\\mathbf{x} &= \\Sigma^{-1}U^T\\mathbf{y} \\\\\n",
+      "\\mathbf{x} &= V\\Sigma^{-1}U^T\\mathbf{y} \\\\\n",
+      "\\end{align}"
      ]
     },
     {
