move LIF analysis from digital LIF to LIF notebook

--- a/synapse/synapse_SNR_uniform.ipynb
+++ b/synapse/synapse_SNR_uniform.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:74f9af30dc67a141723137fc08d3a9d54d24b7634880671078c4126febed240c"
+  "signature": "sha256:632c7b3e1390c81ee6785c12a7d2f06583990620097c55148b25c03256676236"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -56,12 +56,12 @@
       "\\end{align}\n",
       "\n",
       "\\begin{align}\n",
-      "\\operatorname{Var}(x) &= \\lambda^2\\left(\\frac{1}{2\\lambda\\tau}\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right) - 1\\right) \\\\\n",
+      "\\operatorname{Var}(x) &= \\lambda^2\\left(\\frac{1}{2\\lambda\\tau}\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right)-1\\right) \\\\\n",
       "\\operatorname{Var}(x) &\\approx \\frac{1}{12\\tau^2} \\\\\n",
       "\\end{align}\n",
       "\n",
       "\\begin{align}\n",
-      "SNR &= \\frac{1}{\\sqrt{\\frac{1}{2\\lambda\\tau}\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right) - 1}} \\\\\n",
+      "SNR &= \\frac{1}{\\sqrt{\\frac{1}{2\\lambda\\tau}\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right)-1}} \\\\\n",
       "SNR &\\approx \\sqrt{12}(\\lambda\\tau) \\\\\n",
       "\\end{align}\n",
       "\n",
