more lif discussion

--- a/neuron/LIF_neuron.ipynb
+++ b/neuron/LIF_neuron.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2354c33f1c13a21e30798ac8d814e9efecf29d461ba9786cefe15fec877e6d81"
+  "signature": "sha256:33fc3077de303642d57378b71b1e216c73eb5c3be8de9246cdec05c079aed2ce"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,25 +20,11 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "This notebook examines the output spiking statistics of an leaky integrate and fire neuron.  \n",
-      "\n",
-      "The dynamics of the LIF neuron are described by\n",
-      "\n",
-      "$$\\tau\\dot{x}=-x+u$$\n",
-      "\n",
-      "where \n",
-      " - $x$ is the neuron state\n",
-      " - $\\tau$ is the membrane time constant and\n",
-      " - and $u$ is the input to the neuron.\n",
-      "\n",
-      "When $x$ reaches a threshold $x_{t}$, we declare the neuron as having spiked, reset $x$ to $0$, and hold $x$ fixed for a refactory period $t_{ref}$. \n",
-      "\n",
-      "We provide Poisson input spikes to an LIF neuron and filter the neuron's output spikes using a synapse.\n",
+      "This notebook examines the statistics of an leaky integrate and fire (LIF) neuron. \n",
       "\n",
       "We would specifically like to know:\n",
-      " - How does the tuning curve of an LIF neuron \n",
-      " - How noisy does an LIF neuron.\n",
-      "\n"
+      " - How does the LIF tuning curve change with synaptic noise at its input?\n",
+      " - How noisy is the output of an LIF neuron?"
      ]
     },
     {
@@ -53,8 +39,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      " - Noise changes the tuning curve of an LIF neuron.\n",
-      " - The LIF neuron fires close to uniformly."
+      " - Synaptic input noise causes the LIF tuning curve to turn on at mean input levels lower than threshold\n",
+      " - Synaptic input noise causes the LIF tuning curve to undershoot the theoretical LIF tuning curve above threshold\n",
+      " - The LIF neuron fires close to uniformly regardless of its input noise"
      ]
     },
     {
@@ -63,6 +50,43 @@
      "metadata": {},
      "source": [
       "Theoretical LIF neuron analysis"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "An LIF neuron is so named because of its dynamics and spiking (firing) mechanism.\n",
+      "\n",
+      "The dynamics of the LIF neuron are goverened by\n",
+      "\n",
+      "$$\\tau\\dot{x}=-x+u$$\n",
+      "\n",
+      "where \n",
+      " - $x$ is the neuron state\n",
+      " - $\\tau$ is the membrane time constant and\n",
+      " - $u$ is the input to the neuron\n",
+      "\n",
+      "The neuron dynamics can be divided into two components: $-x$, and $u$. $-x$ is the leaky component of the integrator and $u$ is the input being integrated. The speed of the neuron dynamics is goverened by $\\tau$.\n",
+      "\n",
+      "The firing mechanism is governed by\n",
+      "\n",
+      "$$\n",
+      "x(t)\\ge x_t \\rightarrow \n",
+      "  \\begin{cases}\n",
+      "    \\text{soma outputs a spike} \\\\\n",
+      "    x(t):=0 & t_{spk}\\le t < t_{spk}+t_{ref}\\\\\n",
+      "  \\end{cases}\n",
+      "$$\n",
+      "\n",
+      "where\n",
+      " - $x_t$ is the threshold\n",
+      " - $t_{spk}$ is the time at which $x(t)$ crosses threshold and\n",
+      " - $t_{ref}$ is the refractory period\n",
+      " \n",
+      "When $x$ reaches a threshold $x_{t}$, we declare the neuron as having spiked, reset $x$ to $0$, and hold $x$ fixed for a refactory period $t_{ref}$. That is, the neuron integrates its input\n",
+      "\n",
+      "We provide Poisson input spikes to an LIF neuron and filter the neuron's output spikes using a synapse."
      ]
     },
     {
