linkify synapse notebooks

--- a/synapse/synapse_SNR_poisson.ipynb
+++ b/synapse/synapse_SNR_poisson.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a77543930571a9f4cec454220ec5c4556b3f57147295e9acc269f1cde2ea2890"
+  "signature": "sha256:4cd48a0729fbcc29cb869fc9f6a0ffac747ed38c214a021800c986bd94af0902"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,7 +20,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "This notebook looks at the signal to noise ratio (SNR) of a synapse with Poisson input spike train with frequency $\\lambda$.\n",
+      "This notebook looks at the signal to noise ratio (SNR) of a synapse with Poisson input spike train with frequency $\\lambda$. [Here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_SNR_uniform.ipynb) is a notebook considering a synapse with uniform input spikes and [here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_SNR_uniform.ipynb) is a notebook considering a synapse with $p$-thinned uniform input spikes\n",
       "\n",
       "$$SNR = \\frac{E[X]}{\\sqrt{\\operatorname{Var}(X)}}$$\n",
       "\n",
@@ -29,7 +29,7 @@
       "The synapse is a first order lowpass filter described by\n",
       "$$\\tau\\dot{x}=-x+\\sum_i\\delta(t-t_i)$$\n",
       "\n",
-      "where $\\tau$ is the synaptic time constant and $t_i$ describes the arrival time of the $i$th spike.\n",
+      "where $\\tau$ is the synaptic time constant and $t_i$ describes the arrival time of the $i$th spike. [Here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_demo.ipynb) is a notebook demoing a synapse. Since the input spikes are Poisson, the inter-arrival time (a.k.a. inter-spike time (ISI)) is distributed exponentially.\n",
       "\n",
       "Our approach is to consider $X$ at an arbitrary point in time. The $i$th spike that arrived prior to this point in time contributes \n",
       "\n",
