--- a/synapse/synapse_SNR_uniform_pthinned.ipynb
+++ b/synapse/synapse_SNR_uniform_pthinned.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6de71d30dca38c96ffcda5d4730d25fa2c63d0f60b13dc9d8feddbda021ddf4e"
+  "signature": "sha256:43caa6da3b8dcadd97af50a30e686ec98e07f1cf7f9198095a53e765709ef71a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,7 +20,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "This notebook looks at the asymptotic SNR of a synapse with $p$-thinned uniform input spike rate $\\lambda$ "
+      "This notebook looks at the asymptotic SNR of a synapse with $p$-thinned uniform input spike rate $\\lambda$. [Here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_SNR_poisson.ipynb) is a notebook considering a synapse with Poisson input spikes and [here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_SNR_uniform.ipynb) is a notebook considering a synapse with uniform input spikes."
      ]
     },
     {
@@ -32,7 +32,7 @@
       "The synapse with input spikes is a first order lowpass filter described by\n",
       "$$\\tau\\dot{x}=-x+\\sum_i\\delta(t-t_i)I_i$$\n",
       "\n",
-      "where $x$ is the synapse state, $t_i$ is the arrival time of the $i$th spike, and $I_i$ thins the spikes. Spikes are uniform so $t_i=\\frac{i}{\\lambda}$, and $I\\in\\{0,1\\}$ indicates whether we keep the $i$th spike or not.\n",
+      "where $x$ is the synapse state, $t_i$ is the arrival time of the $i$th spike, and $I_i$ thins the spikes. [Here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_demo.ipynb) is a notebook demoing a synapse. Spikes are uniform so $t_i=\\frac{i}{\\lambda}$, and $I\\in\\{0,1\\}$ indicates whether we keep the $i$th spike or not.\n",
       "\n",
       "For a given offset in time within one period, $t_0$, the value of the synapse looking back in time is \n",
       "\n",
