add adaptive notebook

--- a/neuron/LIF_neuron.ipynb
+++ b/neuron/LIF_neuron.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c22478a94bcacdbae483f32749d26e8b99b8e40a7205a5b73fc9551cc7e1975c"
+  "signature": "sha256:d4459e766d400954921068771aa8a9bdacf997b6ddedd74da22edbdbfa1b9c1c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -67,15 +67,15 @@
       " - $\\tau$ is the membrane time constant and\n",
       " - $u$ is the input to the neuron\n",
       "\n",
-      "The neuron dynamics has two terms: $-x$, and $u$. $-x$ is the leaky component of the integrator and $u$ is the input being integrated. The speed of the neuron dynamics is governed by $\\tau$.\n",
+      "The neuron dynamics has two terms: $-x$, and $u$. $-x$ is the leaky component of the integrator and $u$ is the input being integrated. The speed of the neuron dynamics is governed by $\\tau$. $u$ can either be controlled directly as an input current or set as the scaled output of a synapse. If $u$ is derived from a synapse, $u=\\alpha x_{syn}$, where $x_{syn}$ is the synaptic state and $\\alpha$ scales the synaptic output.\n",
       "\n",
       "The firing mechanism is governed by\n",
       "\n",
       "$$\n",
-      "x(t)\\ge x_t \\rightarrow \n",
+      "x\\ge x_t \\rightarrow \n",
       "  \\begin{cases}\n",
       "    \\text{soma outputs a spike} \\\\\n",
-      "    x(t):=0 & t_{spk}\\le t < t_{spk}+t_{ref}\\\\\n",
+      "    x:=0 & t_{spk}\\le t < t_{spk}+t_{ref}\\\\\n",
       "  \\end{cases}\n",
       "$$\n",
       "\n",
@@ -731,9 +731,10 @@
       "\n",
       "For input spike rate $f_{exc}$ and synaptic input current scaling factor $\\alpha$,\n",
       "\n",
-      "$$\n",
-      "E[u] = \\alpha f_{exc}\n",
-      "$$\n",
+      "\\begin{align}\n",
+      "E[u]& = \\alpha E[x_{syn}] \\\\ \n",
+      " &= \\alpha f_{exc}\n",
+      "\\end{align}\n",
       "\n",
       "This holds regardless of whether the input spikes are Poisson, uniform, or anything in between. However, the spread of the input current does depends on the statistics of the input spikes."
      ]
