Start notebook on linear function approximation

--- a/theory/least squares.ipynb
+++ b/theory/least squares.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:574a17ff91002e339055b8b4805391d1050d68c7580aa7efc886dd703cdc0a91"
+  "signature": "sha256:3a57c5b0fcb7cc4b3de31cdf878abe1d317fd294baf180b7010676b7a84a6432"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -588,7 +588,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "If instead of using the regularized least squares approach, we use SVD of $A^TA$ to condition the inverse, how much off we will be in the expected solution?\n",
+      "If instead of using the regularized least squares approach, we use SVD of $A^TA$ to condition the inverse.\n",
       "\n",
       "If $A=U\\Sigma V^T$, \n",
       "\n",
@@ -602,7 +602,13 @@
       "\\mathbf{x} &= (\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\\mathbf{y} \\\\\n",
       " &= (V\\Sigma^2V^T)^{-1}\\mathbf{A}^T\\mathbf{y} \\\\\n",
       " &= V\\Sigma^{-2}V^T\\mathbf{A}^T\\mathbf{y} \\\\\n",
-      "\\end{align}"
+      "\\end{align}\n",
+      "\n",
+      "When computing $\\Sigma^{-2}$, we clip the entries of $\\Sigma$ that are within $\\epsilon$ of $0$ and only invert the resulting nonzero entries.\n",
+      "\n",
+      "Open questions and issues:\n",
+      " - Show the relation between this method and regularized least squares.\n",
+      "  - What is the realtion between the clipping parameters $\\epsilon$ and the regularization parameter $\\sigma$?"
      ]
     },
     {
@@ -625,7 +631,10 @@
       "\\Sigma V^T\\mathbf{x} &= U^T\\mathbf{y} \\\\\n",
       "V^T\\mathbf{x} &= \\Sigma^{-1}U^T\\mathbf{y} \\\\\n",
       "\\mathbf{x} &= V\\Sigma^{-1}U^T\\mathbf{y} \\\\\n",
-      "\\end{align}"
+      "\\end{align}\n",
+      "\n",
+      "Open questions and issues:\n",
+      " - Show the relation between this method and regularized least squares."
      ]
     },
     {
