more linalg background

--- a/theory/linear_function_approximation.ipynb
+++ b/theory/linear_function_approximation.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a5e6e336399956392c58899648ccd69bf57fdf894fca10c77f2862d6b436e783"
+  "signature": "sha256:fc5795d28260381b906b8fe044b3fa7e95300c2dc89411a7d533f4e56328a9e7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -51,7 +51,7 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Notation and background"
+      "Notation"
      ]
     },
     {
@@ -141,6 +141,44 @@
      "level": 1,
      "metadata": {},
      "source": [
+      "Background"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Our analysis will centers on the properties of $\\mathbf{A}$ in relation to the operation $\\mathbf{A}\\mathbf{x}$, which is a linear map $L:\\mathbb{R}^n\\rightarrow\\mathbb{R}^m$ between two vector spaces $\\mathbb{R}^n$ and $\\mathbb{R}^m$ where $\\mathbf{x}\\in\\mathbb{R}^n$ and $\\mathbf{y}\\in\\mathbb{R}^m$.\n",
+      "\n",
+      "The set of vectors $\\mathbf{y}\\in\\mathbb{R}^m$ such that $\\mathbf{y}=\\mathbf{A}\\mathbf{x}$ for any $\\mathbf{x}\\in\\mathbb{R}^n$ is called the _column space_ of $\\mathbf{A}$. The dimensionality of the column space is the _rank_ of $\\mathbf{A}$.\n",
+      "\n",
+      "The set of vectors $\\mathbf{x}\\in\\mathbb{R}^n$ such that $\\mathbf{A}^T\\mathbf{y}=\\mathbf{x}$ for any $\\mathbf{y}\\in\\mathbb{R}^m$ is called the _row space_ of $\\mathbf{A}$. The dimensionality of the row space is the also the rank of $\\mathbf{A}$.\n",
+      "\n",
+      "The set of vectors $\\mathbf{x}\\in\\mathbb{R}^n$ such that $\\mathbf{0}=\\mathbf{A}\\mathbf{x}$ is called the _null_ space. The dimensionality of the null space is the _corank_ of $\\mathbf{A}$.\n",
+      "\n",
+      "The set of vectors $\\mathbf{y}\\in\\mathbb{R}^m$ such that $\\mathbf{A}^T\\mathbf{y}=0$ is called the _left nullspace_. The left null space is the complement of the column space and its dimensionality is also the corank of $\\mathbf{A}$.\n",
+      "\n",
+      "$\\mathbf{A}$ can be decomposed via SVD as\n",
+      "\n",
+      "$$\n",
+      "\\mathbf{A} = \\mathbf{U}\\Sigma\\mathbf{V}^T\n",
+      "$$\n",
+      "\n",
+      "where\n",
+      " - the columns of $\\mathbf{V}$ form an orthogonal basis for $\\mathbb{R}^n$,\n",
+      " - the columns of $\\mathbf{U}$ form an orthogonal basis for $\\mathbb{R}^m$,\n",
+      " - $\\Sigma$ is diagonal and the number of nonzero entries of $\\Sigma$ is the rank of $\\mathbf{A}$, \n",
+      "\n",
+      "therefore\n",
+      " - the columns of $\\mathbf{V}$ corresponding to the zero entries of $\\Sigma$ form an orthogonal basis for the null space of $\\mathbf{A}$,\n",
+      " - the columns of $\\mathbf{U}$ corresponding to the zero entries of $\\Sigma$ form an orthogonal basis for the left null space of $\\mathbf{A}$."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
       "Analysis"
      ]
     },
@@ -148,19 +186,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Our analysis centers on the properties of $\\mathbf{A}$ in relation to the operation $\\mathbf{A}\\mathbf{x}$, which is a linear map $L:\\mathbb{R}^n\\rightarrow\\mathbb{R}^m$ between two vector spaces $\\mathbb{R}^n$ and $\\mathbb{R}^m$ where $\\mathbf{x}\\in\\mathbb{R}^n$ and $\\mathbf{y}\\in\\mathbb{R}^m$.\n",
+      "Using the SVD, we can determine exactly how much error we can expect when approximating a function described by $\\mathbf{y}$ using $\\mathbf{A}\\mathbf{x}$. The error in our approximation will be exactly captured in the left null space of $\\mathbf{A}$.\n",
       "\n",
-      "The set of vectors $\\mathbf{x}\\in\\mathbb{R}^n$ such that $\\mathbf{0}=\\mathbf{A}\\mathbf{x}$ is called the _null_ space.\n",
-      "\n",
-      "The set of vectors $\\mathbf{y}\\in\\mathbb{R}^m$ such that $\\mathbf{y}=\\mathbf{A}\\mathbf{x}$ for any $\\mathbf{x}\\in\\mathbb{R}^n$ is called the _column_ space.\n",
-      "\n",
-      "The space spanned by $\\mathbf{A}\\mathbf{x}$\n",
-      "\n",
-      "$\\mathbf{A}$ can be decomposed via SVD as\n",
-      "\n",
-      "$$\n",
-      "\\mathbf{A} = \\mathbf{U}\\Sigma\\mathbf{V}^T\n",
-      "$$"
+      "\\begin{align}\n",
+      "E &= \\mathbf{y}-\\mathbf{A}\\mathbf{x} \\\\\n",
+      " &= \\mathbf{y}-\\mathbf{U}\\Sigma\\mathbf{V}^T\\mathbf{x} \\\\\n",
+      " &= \\mathbf{U}^T\\mathbf{y}-\\mathbf{U}^T\\mathbf{U}\\Sigma\\mathbf{V}^T\\mathbf{x} \\\\\n",
+      "\\end{align}"
      ]
     },
     {
